--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Basic Banking System</title>
-<link rel="stylesheet" href="Style.css" >
+<link rel="stylesheet" href="style.css" >
 <!-- CSS -->
 <link rel="stylesheet" 
 href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -34,7 +34,7 @@ href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" i
               <ul class="navbar-nav">
                 <li class="nav-item">
                  <!-- <a class="nav-link text-white" href="/">Home <span class="sr-only">(current)</span></a>-->
-				  <a class="nav-link" href="home.html">Home<span class="sr-only">(current)</span></a>
+				  <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="customer.html">Our Customers</a>
